<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/opt1"
        android:onClick="onOption1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/opt1"/>
    <item
        android:id="@+id/opt2"
        android:onClick="onOption2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/opt2"/>
    <item
        android:id="@+id/opt3"
        android:onClick="onOption3"
        android:showAsAction="never"
        android:title="@string/opt3"/>
    <item
        android:id="@+id/opt4"
        android:onClick="onOption4"
        android:showAsAction="never"
        android:title="@string/opt4"/>
    <item
        android:id="@+id/opt5"
        android:onClick="onOption5"
        android:showAsAction="never"
        android:title="@string/opt5"/>
    <item
        android:id="@+id/opt6"
        android:onClick="onOption6"
        android:showAsAction="never"
        android:title="@string/opt6"/>
    
     <item
        android:id="@+id/opt7"
        android:onClick="onOption7"
        android:showAsAction="never"
        android:title="@string/opt7"/>
     
      <item
        android:id="@+id/opt8"
        android:onClick="onOption8"
        android:showAsAction="never"
        android:title="@string/opt8"/>
      
       <item
        android:id="@+id/opt9"
        android:onClick="onOption9"
        android:showAsAction="never"
        android:title="@string/opt9"/>

        <item
        android:id="@+id/opt10"
        android:onClick="onOption10"
        android:showAsAction="never"
        android:title="@string/opt10"/>
        
        <item
        android:id="@+id/opt11"
        android:onClick="onOption11"
        android:showAsAction="never"
        android:title="@string/opt11"/>
</menu>