<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_outfile1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/edit_fileName" />
     
    <TextView android:id="@+id/text_status1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_status1" />
      
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="fileWrite"
        android:text="@string/button_write" />
          
</LinearLayout>