<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
       <EditText android:id="@+id/edit_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_text1"
        />
     
      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="DisplayCar"
        android:text="@string/button_display"
        />
   
    <TextView android:id="@+id/text_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_main"
        />
     
       <ImageView 
        android:id="@+id/image_load"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		/>
    	   
       
          
</LinearLayout>